--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,6 +11,7 @@ analyzer:
   errors:
     non_constant_identifier_names: ignore
     no_leading_underscores_for_local_identifiers: ignore
+    avoid_print: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
