--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,12 @@ dependencies:
   flutter_native_splash: ^2.4.1
   smooth_page_indicator: ^1.1.0
   table_calendar: ^3.1.2
+  file_picker: ^8.1.3
+  webview_flutter: ^4.0.0
+  pusher_channels_flutter:
+    git:
+      url: https://github.com/dola99/pusher-channels-flutter
+      ref: new_version
 
   # State Management  
   get: ^4.6.5
@@ -44,10 +50,9 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/fonts/
-    - assets/icons/
     - assets/images/on_boarding_images/
     - assets/images/verify_email_images/
+    - assets/images/attendance_images/
     - assets/logos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
